--- a/org.eclipse.cdt.cross.arc.gnu/plugin.xml
+++ b/org.eclipse.cdt.cross.arc.gnu/plugin.xml
@@ -7326,117 +7326,12 @@
                id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base.hs">
          </toolChain>
       </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_C_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
-      <template
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project">
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
-         </toolChain>
-         <toolChain
-               id="org.eclipse.cdt.cross.arc.gnu.eb.linux.toolchain.base">
-         </toolChain>
-      </template>
    </extension>
    <extension
          point="org.eclipse.cdt.core.templates">
+
+       <!-- Generic Hello world -->
+
        <template
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.HelloWorld_CPP_Project"
@@ -7449,42 +7344,121 @@
             location="$nl$/templates/projecttemplates/HelloWorld_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.buildArtefactType.application">
       </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_CPP_Project"
-            location="$nl$/templates/projecttemplates/EMSK_EM7D_HelloWorld_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
+
+      <!-- EM Starter Kit C projects -->
+
       <template
             filterPattern=".*gcc"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_C_Project"
             location="$nl$/templates/projecttemplates/EMSK_EM7D_HelloWorld_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_C_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_C_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
       </template>
       <template
             filterPattern=".*gcc"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_C_Project"
             location="$nl$/templates/projecttemplates/EM7_Empty_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_CPP_Project"
-            location="$nl$/templates/projecttemplates/EM7_Empty_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
       </template>
       <template
             filterPattern=".*gcc"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_C_Project"
             location="$nl$/templates/projecttemplates/EM9_Empty_C_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*gcc"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_C_Project"
+            location="$nl$/templates/projecttemplates/EM11_Empty_C_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+
+      <!-- EM Starter Kit C++ Projects -->
+
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM7D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM7D_HelloWorld_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_CPP_Project"
+            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM7_Empty_CPP_Project"
+            location="$nl$/templates/projecttemplates/EM7_Empty_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
       </template>
       <template
             filterPattern=".*g\+\+"
             id="org.eclipse.cdt.cross.arc.gnu.templates.EM9_Empty_CPP_Project"
             location="$nl$/templates/projecttemplates/EM9_Empty_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
       </template>
+      <template
+            filterPattern=".*g\+\+"
+            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project"
+            location="$nl$/templates/projecttemplates/EM11_Empty_CPP_Project/template.xml"
+            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
+         <toolChain
+               id="org.eclipse.cdt.cross.arc.gnu.linux.toolchain.base">
+         </toolChain>
+      </template>
+
 
       <template
             filterPattern=".*gcc"
@@ -7509,42 +7483,6 @@
             id="org.eclipse.cdt.cross.arc.gnu.templates.AXS103_Empty_CPP_Project"
             location="$nl$/templates/projecttemplates/AXS103_Empty_CPP_Project/template.xml"
             projectType="org.eclipse.cdt.cross.arc.gnu.axs103.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_C_Project"
-            location="$nl$/templates/projecttemplates/EM11_Empty_C_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EM11_Empty_CPP_Project"
-            location="$nl$/templates/projecttemplates/EM11_Empty_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_CPP_Project"
-            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM9D_HelloWorld_C_Project"
-            location="$nl$/templates/projecttemplates/EMSK_EM9D_HelloWorld_C_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*g\+\+"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_CPP_Project"
-            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_CPP_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
-      </template>
-      <template
-            filterPattern=".*gcc"
-            id="org.eclipse.cdt.cross.arc.gnu.templates.EMSK_EM11D_HelloWorld_C_Project"
-            location="$nl$/templates/projecttemplates/EMSK_EM11D_HelloWorld_C_Project/template.xml"
-            projectType="org.eclipse.cdt.cross.arc.gnu.emsk.buildArtefactType.application">
       </template>
    </extension>
    <extension
